# movies-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  codecov.yaml  docker-compose.yaml  prometheus.yaml  promtail-config.yaml  pyproject.toml
.github/workflow/: hello-actions.yaml
.github/workflows/: hello-actions.yaml  python-checks.yaml
movie-app/: .coveragerc  app_lifespan.py  database.json  main.py  manage.py  redis_depends.py  stuff.py
movie-app/api/: tools.py
movie-app/api/v1/: __init__.py
movie-app/api/v1/movie/: crud.py  dependecies.py  schemas.py  views.py
movie-app/api/v1/movie/auth/service/: __init__.py  token_service.py  user_service.py
movie-app/api/v1/movie/service/: token_service.py  user_service.py
movie-app/cli_commands/: colors.py  main.py  tokens.py
movie-app/core/: config.py
movie-app/testing/: conftest.py  test_stuff.py
movie-app/testing/test_crud/: test_crud_short_url.py
movie-app/testing/test_pytesting/: test_group_test.py  test_status_200.py  test_xfail_status_code.py  test_xskipif_and_xskip.py
movie-app/testing/test_pytesting/test_api_view/: conftest.py  test_api_actions.py  test_indirect_api_view.py  test_parametrize_fixtures.py
movie-app/testing/test_pytesting/test_crud_service/: test_crud_actions.py
movie-app/testing/test_schemas/: test_movie_schemas.py
movie-app/testing/test_services/: test_redis_tokens.py
movie-app/testing/test_unittesting/test_crud/: test_crud_short_url.py
movie-app/testing/test_unittesting/test_schemas/: test_movie_schemas.py
movie-app/testing/test_unittesting/test_services/: test_redis_tokens.py
prometheus_data/: prometheus.yml
